# cmaketest

./: .gitignore  CMakeLists.txt  README.md  winbuild.bat
projA/: CMakeLists.txt
projB/: CMakeLists.txt
projB/src/: main.cpp
projC/: CMakeLists.txt
projC/src/: main.cpp
